update parsing and server sockets

--- a/WebService/Config/default.conf
+++ b/WebService/Config/default.conf
@@ -1,13 +1,13 @@
 server {
     listen 8003
     server_name localhost
-    root docs/fusion_web/
+    root Docs/8003
     client_body_size 300
-    index index.html
+    index /index.html
     error_page /error_pages/404.html
     host 127.0.0.1
     location / {
-        allow_methods  GET
+        allow_methods GET
         autoindex off
     }
 
@@ -23,36 +23,41 @@ server {
     }
 
     location /sign_up {
+        root /sign
         allow_methods GET POST
         index /sign_up.html
     }
 
     location /sign_in {
+        root /sign
         allow_methods GET POST
         index /sign_in.html
     }
 
     location /sign_out {
+        root /sign
         allow_methods GET POST DELETE
         index /sign_out.html
     }
 
     location /upload {
+        root /contents
         allow_methods GET POST
-        index file_upload.html
+        index /file_upload.html
     }
 
     location /cgi/calculator {
+        root /contents
         allow_methods POST GET
-        index calculator.html
+        index /calculator.html
     }
 }
 
 server {
     listen 8004
     server_name localhost
-    root docs/fusion_web/
-    client_body_size 3000000
+    root Docs/8004
+    client_body_size 3000
     index /index.html
     error_page /error_pages/404.html
     host 0.0.0.0
