--- a/WebService/Config/default.conf
+++ b/WebService/Config/default.conf
@@ -6,6 +6,10 @@ server {
     index /index.html
     error_page /error_pages/404.html
     host 127.0.0.1
+    js_path /js
+    css_path /css
+    img_path /images
+    
     location / {
         allow_methods GET
         autoindex off
