--- a/WebService/Config/default.conf
+++ b/WebService/Config/default.conf
@@ -17,43 +17,10 @@ server {
 
     location /at {
         autoindex on
-        index /tours1.html
-        allow_methods GET
     }
 
-    location /intra {
-        allow_methods GET
-        return http://profile.intra.42.fr/
-    }
-
-    location /sign_up {
-        root /sign
-        allow_methods GET POST
-        index /sign_up.html
-    }
-
-    location /sign_in {
-        root /sign
-        allow_methods GET POST
-        index /sign_in.html
-    }
-
-    location /sign_out {
-        root /sign
-        allow_methods GET POST DELETE
-        index /sign_out.html
-    }
-
-    location /upload {
-        root /contents
-        allow_methods GET POST
-        index /file_upload.html
-    }
-
-    location /cgi/calculator {
-        root /contents
-        allow_methods POST GET
-        index /calculator.html
+    location /google {
+        return http://google.com
     }
 }
 
@@ -68,12 +35,6 @@ server {
     location / {
         allow_methods  POST GET
         autoindex off
-    }
-
-    location /at {
-        autoindex on
-        index /tours1.html
-        allow_methods GET POST
     }
 
     location /blue {
