fix | seg issue

--- a/WebService/Config/default.conf
+++ b/WebService/Config/default.conf
@@ -22,6 +22,10 @@ server {
     location /google {
         return http://google.com
     }
+
+    location /inflearn {
+        return https://inflearn.com/
+    }
 }
 
 server {
@@ -33,7 +37,7 @@ server {
     error_page /error_pages/404.html
     host 0.0.0.0
     location / {
-        allow_methods  POST GET
+        allow_methods  GET
         autoindex off
     }
 
